# ai-projects

./: READEME.md
email-assistant/: .env.example  README.md  main.py  pyproject.toml
email-assistant/src/: agent.py  config.py  mock_data.py  state.py
email-assistant/src/middleware/: human_loop.py  wrap_model.py
email-assistant/src/tools/: auth.py  email.py  inbox.py
personal-chef/: main.py  pyproject.toml
wedding-planner/: .env.example  README.md  main.py  pyproject.toml
wedding-planner/src/: config.py  state.py
wedding-planner/src/agents/: coordinator.py  playlist_agent.py  travel_agent.py  venue_agent.py
wedding-planner/src/mcp/: client.py
wedding-planner/src/tools/: agent_tools.py  database.py  state_tools.py  web_search.py
